spade-tests/src/snapshots/spade_tests__parser__errors_in_statements_are_recoverable.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    let x = ;
    let y ;
    set z = &true;
}


error: Unexpected `;`, expected expression
  ┌─ testinput:2:13
  │
2 │     let x = ;
  │             ^ expected expression here

error: Unexpected `;`, expected `=`
  ┌─ testinput:3:11
  │
3 │     let y ;
  │           ^ expected `=`

error: Use of undeclared name z
  ┌─ testinput:4:9
  │
4 │     set z = &true;
  │         ^ Undeclared name
